deploy/i.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-external
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /ui
